fixed the mistakes

--- a/Altium/Project Outputs for air-quality-monitoring-system/Design Rule Check - air-quality-monitoring-system_pcb.html
+++ b/Altium/Project Outputs for air-quality-monitoring-system/Design Rule Check - air-quality-monitoring-system_pcb.html
@@ -224,12 +224,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">14:00:49</td>
+<td class="front_matter_column3">17:50:42</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:01</td>
+<td class="front_matter_column3">00:00:00</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDJGVGQPIIPZ2DBJD4XVG4VU4SKD10SY1LLBEX52YOP1MSTH4F0MJ"><h2>Summary</h2></a><table>
+</table><a name="IDQO3U2RWQQLI4EFZ5W5SBKESRRKOZM04HNCKVZ2FP2N2ATRDPCZBI"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,63 +265,63 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID54XBGI4KXZ3QBZR0JR2Y2BUUEKODYS42HRWCPVGMZ22PL421LRBD">Clearance Constraint (Gap=5.984mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDTLIJJE4MFSCRLEYNEZX0353GAPIWHMTSHKAPPVMMSED2BYF22UBM">Clearance Constraint (Gap=0.152mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID1341GIQ5APN5JA3A2KRKKFS13NLHZTR1H1EBB1EVV43VXL500TLF">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDF0VIXZ4UJGGQL5HKZMYTUW32NCH1SASP5BSFRPTR4QN5AUDHETO">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDHWTPRTNSVXUGOU51O1Q5RVTDLF0DXW3X1LJP4SFMPCN235QXQ52">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDEBHIRAK4XOJ0H34EZJM3RXGTTDMSMSZBMN00DQHNAHEW4OVVNKML">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID3YT1DPC0TQUPEYL55Z3HLXDJDPODVIDXOIEWVHDXVK3L0O3I35BD">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#ID2ZFTBH22CKQTODVCXGPTU1DKQBXQTXPAKLNNFJBPQMGMSEHRYM1D">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDOAO1JDZCHGUIDADSPSIKZD3AQCZL2Y2F2SMVNAKPVGRWGS1IDK1B">Width Constraint (Min=11.811mil) (Max=19.685mil) (Preferred=15.748mil) (All)</a></td>
+<td class="column1"><a href="#IDCWNBFXHCXPCIB35A2IUQTJRAFEZ5KJTNVXNSW2FKBIJNMQSE5HGJ">Width Constraint (Min=0.3mm) (Max=0.5mm) (Preferred=0.4mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDVT5T4FGF30DLN2X4UZP4NIU5YKZSJUK4J212GPOBJAJGUWQ40UTO">Routing Topology Rule(Topology=Shortest) (All)</a></td>
+<td class="column1"><a href="#IDS2V1I5GTASNQMREX51WY4UAYNLIWJG3IJBEE4VBVYR3CPC51C2SI">Routing Topology Rule(Topology=Shortest) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDFUK0MA5Z2JG4HB2S13ZMDWRYFDXMMWN5QE54CFIVCZG2LMUXZCH">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDFGITQR2NNEVSH1N0STR1HPN3GF0LDZCVWGH0GSSWTOMCBF34ILD">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDUNWUO1NFGOT0MZVJIAZ24U0KJV1FCUMNBT01IMUODGHHZU2VJDN">Hole Size Constraint (Min=11.811mil) (Max=250mil) (All)</a></td>
+<td class="column1"><a href="#IDAY4TISYVR1BZGLVLDT2Z4ODVRHLZUGIUQZHZ0RBWQK4CMUVIMBPC">Hole Size Constraint (Min=0.3mm) (Max=6.35mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDCTJOQLB5QALIDIPV23SG1P30GKEJ4ABPAXDKSCBSY1H1UXGOA1DP">Hole To Hole Clearance (Gap=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDUJDCMSXHUSLRDIOHBSL33WZK3GTHJBE5HZOBZYFNWGODDRXDNY5K">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDJKUKHOE2NRJMO0SYOZOKB1ONHDCPYJ5DKMCKPBHDCEI31JHEF4BG">Minimum Solder Mask Sliver (Gap=15.748mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDYR1FLRYHD452FYDCUOQNAHWZKFS4PUQUW5FXYWBCWAVRH4BDJWXP">Minimum Solder Mask Sliver (Gap=0.4mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDSROIJZJ44CFFMKUKW10P2CDHC1VLGGXZLXP3WNPWHWU1GMEVNLK">Minimum Solder Mask Sliver (Gap=3.937mil) (InComponent('Q3')OR InComponent('U7')Or InComponent('U5')),(All)</a></td>
+<td class="column1"><a href="#IDMTMES0I2VX1LIKYCZRHU5T00KDDAYHIRDK34PTJP5DIO0PJQOWZF">Minimum Solder Mask Sliver (Gap=0.1mm) (InComponent('Q3')OR InComponent('U7')Or InComponent('U5')Or InComponent('J1')),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDSGQ5NP3GQFTLR1ESO4XZ4QEABY1KLJE3HLKJ0O2G0WV0044FOCG">Silk To Solder Mask (Clearance=0mil) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDHHMERY3LAMZWLIZZRSD40MUP2P4CSLXCR23N23IOSAYHUK0A44VC">Silk To Solder Mask (Clearance=0mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDJ04IPEEJA0Q2NONUHTUSDW5JGMT4AY4RLCXUDYHWMCQ4HFPOJADN">Silk to Silk (Clearance=10mil) (All),(All)</a></td>
+<td class="column1"><a href="#IDYBOJMGUTAKRPONWBKNRHUX2J2CTJ4BA5MOZZDYJVOWZOXRWW4O5K">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDUDVJE2QNXALHOVBRVE2QXVCZQISXWIHYENDZYYDUG0D1YAIVSF4O">Net Antennae (Tolerance=0mil) (All)</a></td>
+<td class="column1"><a href="#IDSYDTGGRTX0RWJMXPVGCDAXE0JEZ2LKC5NV0VTDE1TQ3DLH02UHBM">Net Antennae (Tolerance=0mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDZOFJPYWZ4ZBHKHTELQEAT3UIZFWL22EHXHSS5WDOW45WGWNTIRKE">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
+<td class="column1"><a href="#ID1DF51FM2S0ASHNACEC5JG5Z1XDFI5OFULKJKRCHGH33SUKES3N5M">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
