--- a/Altium/Project Outputs for air-quality-monitoring-system/Design Rule Check - air-quality-monitoring-system_pcb.html
+++ b/Altium/Project Outputs for air-quality-monitoring-system/Design Rule Check - air-quality-monitoring-system_pcb.html
@@ -219,12 +219,12 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">29.10.2025</td>
+<td class="front_matter_column3">05.11.2025</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">17:50:42</td>
+<td class="front_matter_column3">13:12:07</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="IDQO3U2RWQQLI4EFZ5W5SBKESRRKOZM04HNCKVZ2FP2N2ATRDPCZBI"><h2>Summary</h2></a><table>
+</table><a name="IDOUOHLJLA1JSTDVT0343AE2MTEC1MU5QOK0UDO3BOMBAH2XXEOTAE"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,63 +265,71 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDTLIJJE4MFSCRLEYNEZX0353GAPIWHMTSHKAPPVMMSED2BYF22UBM">Clearance Constraint (Gap=0.152mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDWKKJQY33IG3WOOGA05JNSU2DCNZZAUH4V5PHXXO0QLUHH03EA2GL">Clearance Constraint (Gap=0.152mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDF0VIXZ4UJGGQL5HKZMYTUW32NCH1SASP5BSFRPTR4QN5AUDHETO">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDWKIMBVWD0AZFMWVDIAAN4AYUMFL01TX2JEQMC2GPZEYLHC05QNED">Clearance Constraint (Gap=0.127mm) (IsStitchingVia and InNet('GND')),((IsVia and (Not IsStitchingVia)) Or IsPad)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDEBHIRAK4XOJ0H34EZJM3RXGTTDMSMSZBMN00DQHNAHEW4OVVNKML">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDESX0SHLE5D5RFGD10FAKQPLX1KEDGNOFYXRIHMLX1AUUPRL4K2TB">Clearance Constraint (Gap=1.5mm) (IsPad AND (Name = 'Free-TOOL2')),(InNet('GND'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#ID2ZFTBH22CKQTODVCXGPTU1DKQBXQTXPAKLNNFJBPQMGMSEHRYM1D">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDNFIIMEADJ5GCEDRSDLUK1H5E3BTNVPRHO0QM44KXDVUQ2JQRLE4H">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDCWNBFXHCXPCIB35A2IUQTJRAFEZ5KJTNVXNSW2FKBIJNMQSE5HGJ">Width Constraint (Min=0.3mm) (Max=0.5mm) (Preferred=0.4mm) (All)</a></td>
+<td class="column1"><a href="#ID1DJEUBRNGVICEJZGZ5G2AAOVLESBVK0JRE0VFQHSU0WEKO03C2HE">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDS2V1I5GTASNQMREX51WY4UAYNLIWJG3IJBEE4VBVYR3CPC51C2SI">Routing Topology Rule(Topology=Shortest) (All)</a></td>
+<td class="column1"><a href="#IDMVKRP3H4DFMFEHRZXU23B5VDRKZW4CSLT0DUV1JE4EP012LRZQ5J">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDFGITQR2NNEVSH1N0STR1HPN3GF0LDZCVWGH0GSSWTOMCBF34ILD">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#IDWOUQXUB1XTLABVMMMC0X4M4HBTIFPLMR5ZO1FGHH33R4OZ5BFO">Width Constraint (Min=0.3mm) (Max=0.6mm) (Preferred=0.5mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDAY4TISYVR1BZGLVLDT2Z4ODVRHLZUGIUQZHZ0RBWQK4CMUVIMBPC">Hole Size Constraint (Min=0.3mm) (Max=6.35mm) (All)</a></td>
+<td class="column1"><a href="#IDRKME2FT04SMQP1IO4I2JMC1UKPC3WYK2B0DS4GNXZGRSYXZR34QH">Routing Topology Rule(Topology=Shortest) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDUJDCMSXHUSLRDIOHBSL33WZK3GTHJBE5HZOBZYFNWGODDRXDNY5K">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDNPQQB2EFWET4NRL3NZBMZOVZINOIJA30LKAJCOMBOHKPSEBCKXEH">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDYR1FLRYHD452FYDCUOQNAHWZKFS4PUQUW5FXYWBCWAVRH4BDJWXP">Minimum Solder Mask Sliver (Gap=0.4mm) (All),(All)</a></td>
+<td class="column1"><a href="#ID1UXFEGLDJO2SJ2P03A505TMH1H3LBSKCQCQEZHDY545GXXUPHSWI">Hole Size Constraint (Min=0.3mm) (Max=6.35mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDMTMES0I2VX1LIKYCZRHU5T00KDDAYHIRDK34PTJP5DIO0PJQOWZF">Minimum Solder Mask Sliver (Gap=0.1mm) (InComponent('Q3')OR InComponent('U7')Or InComponent('U5')Or InComponent('J1')),(All)</a></td>
+<td class="column1"><a href="#IDS2XE4XZMTZCYMRE3Y11RNHYTSFS5JDGWZYDCO0HAU2OF5BLHJESD">Hole To Hole Clearance (Gap=0.254mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDHHMERY3LAMZWLIZZRSD40MUP2P4CSLXCR23N23IOSAYHUK0A44VC">Silk To Solder Mask (Clearance=0mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#IDDFHMHDMAREJPLKKG2WOSWG4FYEQIVB1XIJDSNPNDDLTTYXJ0G2PM">Minimum Solder Mask Sliver (Gap=0.4mm) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDYBOJMGUTAKRPONWBKNRHUX2J2CTJ4BA5MOZZDYJVOWZOXRWW4O5K">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDVYG4AHE0EJEWLKO0RYWWSUYPEDLMUSVSEDDIHVLVUFD4GUZ5GH4J">Minimum Solder Mask Sliver (Gap=0.1mm) (InComponent('Q3')OR InComponent('U7')Or InComponent('U5')Or InComponent('J1')),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDSYDTGGRTX0RWJMXPVGCDAXE0JEZ2LKC5NV0VTDE1TQ3DLH02UHBM">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDMF4USAFMDBR0VXMVS44U2O5BJXDHTOYRW3ONYKNZYZSLJFEYKVG">Silk To Solder Mask (Clearance=0mm) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID1DF51FM2S0ASHNACEC5JG5Z1XDFI5OFULKJKRCHGH33SUKES3N5M">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#IDR21ANDCJZRKOFIKA1MGBO3FR4PJBYAS5LE13KWOKMRXXLSIED3EC">Silk to Silk (Clearance=0.254mm) (All),(All)</a></td>
+<td class="column2">0</td>
+</tr>
+<tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
+<td class="column1"><a href="#IDASVLIHGA5TQ0BGBTBDDQYDZUILBG3J5UGU0MMULNJ3DXHM35O5CC">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column2">0</td>
+</tr>
+<tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
+<td class="column1"><a href="#IDNRAZGPPCHHGRP2KS4D0NTYDYLMBJJ13HCDINEOQIBU1B2UU2RFB">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
